--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1012,6 +1012,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
     <script src="{% static 'js/login-enhancements.js' %}"></script>
     <script>
         let selectedMethod = null;
