--- a/templates/authentication/mfa_challenge.html
+++ b/templates/authentication/mfa_challenge.html
@@ -1293,6 +1293,7 @@
     </footer>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
     <script>
         let selectedMethod = null;
 
