--- a/templates/authentication/totp_setup_qr.html
+++ b/templates/authentication/totp_setup_qr.html
@@ -780,5 +780,6 @@
         }
     </script>
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
 </body>
 </html>
