--- a/templates/authentication/totp_verify_setup.html
+++ b/templates/authentication/totp_verify_setup.html
@@ -925,5 +925,6 @@
         setInterval(updateTimer, 1000);
     </script>
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
 </body>
 </html>
