--- a/templates/authentication/backup_codes.html
+++ b/templates/authentication/backup_codes.html
@@ -584,6 +584,7 @@
     </footer>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
     <script>
         const backupCodes = [
             {% for code in backup_codes %}
