--- a/templates/authentication/mfa_setup.html
+++ b/templates/authentication/mfa_setup.html
@@ -2658,6 +2658,7 @@
     </footer>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
     
     <!-- Auto-trigger backup codes variable -->
     <script>
