--- a/templates/authentication/totp_setup_backup.html
+++ b/templates/authentication/totp_setup_backup.html
@@ -797,5 +797,6 @@
     </footer>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
 </body>
 </html>
