--- a/templates/authentication/view_all_activities.html
+++ b/templates/authentication/view_all_activities.html
@@ -790,6 +790,7 @@
     </footer>
 
     <script src="{% static 'js/login.js' %}"></script>
+    <script src="{% static 'js/footer.js' %}"></script>
     <script>
         // Enhanced Activities Page JavaScript
         document.addEventListener('DOMContentLoaded', function() {
